<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppDetailsFragment">

    <TextView
        android:id="@+id/appNameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/appNameDetails"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/artistNameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appNameDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/artistNameDetails"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/releaseDateDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/artistNameDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/releaseDateDetails"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/genreDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/releaseDateDetails"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/genreDetails"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listViewGenreDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genreDetails"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />
</RelativeLayout>