<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterAccountFragment">

    <EditText
        android:id="@+id/editNameRegisterAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:text="" />
    <EditText
        android:id="@+id/editEmailRegisterAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editNameRegisterAccount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editPasswordRegisterAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editEmailRegisterAccount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPasswordRegisterAccount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/submitButton" />

    <TextView
        android:id="@+id/cancelRegisterAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submitButton"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:text="@string/cancel" />
</RelativeLayout>